Overflow bug for long form pitch

--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -61,6 +61,8 @@ section
    up in decorative divs
  */
 .long-form-pitch
+    overflow hidden
+
     .row
         margin-bottom 2rem
 
@@ -69,6 +71,10 @@ section
 
 .skew-me
     position relative
+    z-index 0
+
+    p
+        z-index 1
 
     .skew-you
         background-image url('/img/scanline.png')
@@ -112,14 +118,12 @@ $footer-bg = $agentOrange
 
 footer
     section-padding()
-    //background-image url('/img/footer_bg.jpg')
     background-image url('/img/scanline.png')
     background-repeat repeat
     background-color $footer-bg
-    //background-size cover
     border-bottom 7px solid $footer-border
 
-    a
+    ul li a
         color $black
         background-color $agentOrange
 
